crates/biome_manifest/src/snapshots/duplicate_config_keys.snap
---
source: crates/biome_manifest/src/lib.rs
assertion_line: 317
expression: diagnostics
---
deserialize ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The key recommended is specified more than once.
  
    3 │                 "configs": [{
    4 │                     "recommended": "./first.json",
  > 5 │                     "recommended": "./second.json"
      │                     ^^^^^^^^^^^^^
    6 │                 }]
    7 │             }
