crates/biome_manifest/src/snapshots/duplicate_preset_keys.snap
---
source: crates/biome_manifest/src/lib.rs
assertion_line: 430
expression: diagnostics
---
deserialize ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The key recommended is specified more than once.
  
    5 │                     "presets": {
    6 │                         "recommended": ["useMyLogger"],
  > 7 │                         "recommended": ["useMyLogger"]
      │                         ^^^^^^^^^^^^^
    8 │                     }
    9 │                 }
