crates/biome_manifest/src/snapshots/duplicate_rule_keys.snap
---
source: crates/biome_manifest/src/lib.rs
assertion_line: 317
expression: diagnostics
---
deserialize ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The key useMyLogger is specified more than once.
  
    4 │                     "rules": [{
    5 │                         "useMyLogger": "./first.grit",
  > 6 │                         "useMyLogger": "./second.grit"
      │                         ^^^^^^^^^^^^^
    7 │                     }],
    8 │                     "presets": { "recommended": ["useMyLogger"] }
