crates/biome_manifest/src/snapshots/preset_without_rules.snap
---
source: crates/biome_manifest/src/lib.rs
assertion_line: 328
expression: diagnostics
---
deserialize ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Preset recommended must contain at least one rule.
  
  > 1 │ {
      │ ^
  > 2 │                 "version": 1,
  > 3 │                 "plugins": {
  > 4 │                     "rules": [{ "useMyLogger": "./useMyLogger.grit" }],
  > 5 │                     "presets": { "recommended": [] }
  > 6 │                 }
  > 7 │             }
      │             ^
